assets/stylesheets/contracts.css
.responsiveparent
{
  width:100%;
  white-space: nowrap;
}

.responsivechild
{
  display:inline-block;
  /* Remove 4 px each to have room for 8px padding between the two columns */
  width: calc(50% - 4px);
  vertical-align: top;
  padding-right: 8px;
}
.responsivechild:last-child
{
  padding-right: 0px;
}

@media screen and (max-width: 899px) {
  .responsivechild
  {
    width:100%;
    padding-right: 0px;
  }
  .responsiveparent
  {
    white-space: normal;
  }

  /* Almost as-is from responsive.css */
  a.buttons  {
    font-weight: bold;

    display: inline-block;

    margin: 5px 0;
    margin-right: 2px;
    padding: 9px 9px 9px 9px;

    border: 1px solid #ddd;
    -webkit-border-radius: 3px;
    border-radius: 3px;
    background-color: transparent;
    background-position-x: 4px;
  }
}

.contract-summary, .contract-summary-description {
  white-space: normal;
}

.contracts-summary td{
  background: #EEE;
  padding: 10px;
  border: 1px solid #E4E4E4;
  text-align: center;
}

.contracts-summary h3{
  font-size: 1.2em;
}

.contracts-list, .time-entries-for-contract-list {
  width: 100%;
}

.bigbold{
  font-size:1.5em;
  font-weight:bold;
}

.green{
  color:#009b00;
}

.blue{
  color:#0072ca;
}

p .red{
  color: red;
  text-decoration: underline;
  font-size: 85%;
}

p .blue{
  text-decoration: underline;
  font-size: 85%;
}

.contract-summary-td {
  width: 60%;
  padding-right: 10px;
}

table.hours-summary th.member {
  text-align: left;
  padding-left: 4px;
}
table.hours-summary th.hours, table.hours-summary th.amount, table.contracts-list th.hours, table.contracts-list th.amount, table.invoices-for-contract-list th.amount  {
  text-align: right;
  padding-right: 4px;
}
table.hours-summary td.hours, table.hours-summary td.amount, table.contracts-list td.hours, table.contracts-list td.amount, table.invoices-for-contract-list td.amount {
  font-weight: normal;
  text-align: right;
  padding-right: 4px;
}
table.hours-summary tr.total-hours, table.hours-summary tr.total-hours td.hours, table.hours-summary tr.total-hours td.amount  {
  font-weight: bold;
}
table.hours-summary td.member {
  text-align: left;
  padding-left: 4px;
}

fieldset#contractor_rates {
  width: 500px;
}

/***** Flash & error messages ****/
div.flash.contract {
  background: url(../images/true.png) 8px 5px no-repeat;
  background-color: #dfffdf;
  border-color: #9fcf9f;
  color: #005f00;
}

div.flash.contract_warning {
  background: url(../../../images/warning.png) 8px 5px no-repeat;
  background-color: #FFEBC1;
  border-color: #FDBF3B;
  color: #A6750C;
}

.icon-link { background-image: url(../../../images/link.png); }

#content .tabs {
  clear: both;
}

